@@ -49,6 +49,7 @@ require("__rubia__.compat.bz-mods")
 require("__rubia__.compat.resource-spawner-overhaul")
 require("__rubia__.compat.krastorio2-so")
 require("__rubia__.compat.aai-industry")
+require("__rubia__.compat.crushing-industry")
 
 require("__rubia__.prototypes.data-script.recycling-fixes")
 
