@@ -2,6 +2,7 @@
 Version: 0.69.70
 Date: ????
   Changes:
+    - Crushing Industry compatibility
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.69
 Date: 2025-06-26
